Updated the solver to ECOS

--- a/convex/mouselinos_cx_assignment2.ipynb
+++ b/convex/mouselinos_cx_assignment2.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 148,
    "outputs": [
     {
      "name": "stdout",
@@ -347,68 +347,40 @@
       "                                     CVXPY                                     \n",
       "                                     v1.4.2                                    \n",
       "===============================================================================\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Your problem has 10000 variables, 3 constraints, and 0 parameters.\n",
-      "(CVXPY) Apr 22 02:04:12 AM: It is compliant with the following grammars: DCP, DQCP\n",
-      "(CVXPY) Apr 22 02:04:12 AM: (If you need to solve this problem multiple times, but with different data, consider using parameters.)\n",
-      "(CVXPY) Apr 22 02:04:12 AM: CVXPY will first compile your problem; then, it will invoke a numerical solver to obtain a solution.\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Your problem is compiled with the CPP canonicalization backend.\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Your problem has 10000 variables, 3 constraints, and 0 parameters.\n",
+      "(CVXPY) Apr 22 02:05:24 AM: It is compliant with the following grammars: DCP, DQCP\n",
+      "(CVXPY) Apr 22 02:05:24 AM: (If you need to solve this problem multiple times, but with different data, consider using parameters.)\n",
+      "(CVXPY) Apr 22 02:05:24 AM: CVXPY will first compile your problem; then, it will invoke a numerical solver to obtain a solution.\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Your problem is compiled with the CPP canonicalization backend.\n",
       "-------------------------------------------------------------------------------\n",
       "                                  Compilation                                  \n",
       "-------------------------------------------------------------------------------\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Compiling problem (target solver=SCS).\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Reduction chain: FlipObjective -> Dcp2Cone -> CvxAttr2Constr -> ConeMatrixStuffing -> SCS\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Applying reduction FlipObjective\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Applying reduction Dcp2Cone\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Applying reduction CvxAttr2Constr\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Applying reduction ConeMatrixStuffing\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Applying reduction SCS\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Finished problem compilation (took 5.662e-02 seconds).\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Compiling problem (target solver=ECOS).\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Reduction chain: FlipObjective -> Dcp2Cone -> CvxAttr2Constr -> ConeMatrixStuffing -> ECOS\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Applying reduction FlipObjective\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Applying reduction Dcp2Cone\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Applying reduction CvxAttr2Constr\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Applying reduction ConeMatrixStuffing\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Applying reduction ECOS\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Finished problem compilation (took 1.080e-02 seconds).\n",
       "-------------------------------------------------------------------------------\n",
       "                                Numerical solver                               \n",
       "-------------------------------------------------------------------------------\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Invoking solver SCS  to obtain a solution.\n",
-      "------------------------------------------------------------------\n",
-      "\t       SCS v3.2.4 - Splitting Conic Solver\n",
-      "\t(c) Brendan O'Donoghue, Stanford University, 2012\n",
-      "------------------------------------------------------------------\n",
-      "problem:  variables n: 10000, constraints m: 10201\n",
-      "cones: \t  z: primal zero / dual free vars: 201\n",
-      "\t  l: linear vars: 10000\n",
-      "settings: eps_abs: 1.0e-05, eps_rel: 1.0e-05, eps_infeas: 1.0e-07\n",
-      "\t  alpha: 1.50, scale: 1.00e-01, adaptive_scale: 1\n",
-      "\t  max_iters: 100000, normalize: 1, rho_x: 1.00e-06\n",
-      "\t  acceleration_lookback: 10, acceleration_interval: 10\n",
-      "lin-sys:  sparse-direct-amd-qdldl\n",
-      "\t  nnz(A): 40000, nnz(P): 0\n",
-      "------------------------------------------------------------------\n",
-      " iter | pri res | dua res |   gap   |   obj   |  scale  | time (s)\n",
-      "------------------------------------------------------------------\n",
-      "     0| 7.38e+00  1.00e+00  4.02e+02 -2.01e+02  1.00e-01  2.41e-02 \n",
-      "   250| 9.82e-04  8.13e-03  4.92e-05 -9.73e-02  5.24e-01  1.32e-01 \n",
-      "   500| 1.90e-04  1.62e-04  4.37e-06 -9.71e-02  6.43e-02  2.36e-01 \n",
-      "   750| 5.74e-05  3.95e-05  3.57e-06 -9.71e-02  6.43e-02  3.37e-01 \n",
-      "   875| 5.72e-05  1.64e-05  9.18e-07 -9.71e-02  6.43e-02  3.90e-01 \n",
-      "------------------------------------------------------------------\n",
-      "status:  solved\n",
-      "timings: total: 3.90e-01s = setup: 2.10e-02s + solve: 3.69e-01s\n",
-      "\t lin-sys: 2.33e-01s, cones: 2.03e-02s, accel: 3.38e-02s\n",
-      "------------------------------------------------------------------\n",
-      "objective = -0.097127\n",
-      "------------------------------------------------------------------\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Invoking solver ECOS  to obtain a solution.\n",
       "-------------------------------------------------------------------------------\n",
       "                                    Summary                                    \n",
       "-------------------------------------------------------------------------------\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Problem status: optimal\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Optimal value: 9.721e-02\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Compilation took 5.662e-02 seconds\n",
-      "(CVXPY) Apr 22 02:04:12 AM: Solver (including time spent in interface) took 3.940e-01 seconds\n"
+      "(CVXPY) Apr 22 02:05:24 AM: Problem status: optimal\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Optimal value: 9.665e-02\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Compilation took 1.080e-02 seconds\n",
+      "(CVXPY) Apr 22 02:05:24 AM: Solver (including time spent in interface) took 8.128e-02 seconds\n"
      ]
     },
     {
      "data": {
-      "text/plain": "0.09720567134669014"
+      "text/plain": "0.09664769511915104"
      },
-     "execution_count": 147,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,13 +388,13 @@
    "source": [
     "# Problem\n",
     "problem = cp.Problem(objective, constraints)\n",
-    "problem.solve(solver=cp.SCS, verbose=True)"
+    "problem.solve(solver=cp.ECOS, verbose=True)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T00:04:12.532046300Z",
-     "start_time": "2024-04-22T00:04:11.999213100Z"
+     "end_time": "2024-04-22T00:05:24.686889400Z",
+     "start_time": "2024-04-22T00:05:24.560346300Z"
     }
    }
   },
