--- a/convex/assignment_3/mouselinos_cx_assignment3.ipynb
+++ b/convex/assignment_3/mouselinos_cx_assignment3.ipynb
@@ -89,31 +89,43 @@
     "#### Constraints\n",
     "\n",
     "1. **Second-Order Cone (SOC) Constraint for $t_i$**:\n",
+    "   $$ t_i = \\sqrt{(x_i - y_i)^T P (x_i - y_i)}$$\n",
+    "   $$ t_i^2 = (x_i - y_i)^T P (x_i - y_i)$$\n",
+    "   or as a constraint:\n",
     "   $$ t_i^2 \\geq (x_i - y_i)^T P (x_i - y_i), \\quad \\forall i $$\n",
     "   $$\n",
-    "   \\| \\begin{pmatrix} t_i \\\\ (x_i - y_i)^T P^{1/2} \\end{pmatrix}\\|_2 \\leq t_i\n",
+    "   \\| \\begin{pmatrix}P^{1/2} (x_i - y_i) \\end{pmatrix}\\|_2 \\leq t_i\n",
     "   $$\n",
     "   $$\n",
-    "   (t_i, (x_i - y_i)^T P (x_i - y_i)) \\in Q^n\n",
+    "   (t_i, P^{1/2} (x_i - y_i)) \\in Q^n\n",
     "   $$\n",
     "   where\n",
     "   $$\n",
-    "   Q^n = \\{(t, x) \\mid \\|x\\|_2^2 \\leq t\\}\n",
+    "   Q^n = \\{(t, x) \\mid \\|x\\|_2 \\leq t\\}\n",
+    "   $$\n",
+    "   Another way to express this would also be to directly employ the fact that P is a PSD matrix.\n",
+    "   Then we know that it can be written as $P = L^TL$, where $L$ is the Cholesky factorization (or any equivalent one)\n",
+    "   Thus:\n",
+    "    $$\n",
+    "    (x_i - y_i)^T P (x_i - y_i)=(x_i - y_i)^T L^T L (x_i - y_i)=\\|L (x_i - y_i)\\|_2^2\n",
+    "    $$\n",
+    "   and:\n",
+    "   $$\n",
+    "   t_i^2 \\geq \\|L (x_i - y_i)\\|_2^2\n",
+    "   $$\n",
+    "   $$\n",
+    "   (t, L (x_i - y_i)) \\in Q^n\n",
     "   $$\n",
     "\n",
     "\n",
     "2. **Rotated Second-Order Cone (RSOC) Constraint for $u_i$**:\n",
-    "   We can express $\\( (d_i - t_i)^2 \\leq u_i \\)$:\n",
+    "   We can express $\\( (d_i - t_i)^2 \\leq u_i \\)$ as the equivalent $\\| (d_i - t_i) \\|^2_2 \\leq u_i$:\n",
     "   $$\n",
     "   \\| \\begin{pmatrix} 2\\sqrt{u_i} \\\\ d_i - t_i \\end{pmatrix} \\|_2 \\leq d_i + t_i, \\quad \\forall i\n",
     "   $$\n",
     "\n",
     "   $$\n",
-    "   (u_i, 1, d_i - t_i) \\in Q_r^n\n",
-    "   $$\n",
-    "   where\n",
-    "   $$\n",
-    "   Q_r^n = \\{(u, v, w) \\mid 2uv \\geq w^2, u \\geq 0, v \\geq 0 \\}\n",
+    "   (1/2, u_i, d_i - t_i) \\in Q_r^n, u \\geq 0, v \\geq 0\n",
     "   $$\n",
     "\n",
     "3. **Positive Semidefinite Cone (PSD) Constraint**:\n",
@@ -125,17 +137,17 @@
     "The final conic program is:\n",
     "\n",
     "$$\n",
-    "\\text{minimize} \\quad 1^T \\mathbf{u}\n",
+    "\\text{minimize} \\sum \\mathbf{u_i}\n",
     "$$\n",
     "\n",
     "subject to:\n",
     "\n",
     "$$\n",
-    "| \\begin{pmatrix} t_i \\\\ (x_i - y_i)^T P^{1/2} \\end{pmatrix} \\|_2 \\leq t_i, \\quad \\forall i \\quad \\text{(SOC)}\n",
+    "(t_i, P^{1/2} (x_i - y_i)) \\in Q^n \\quad \\text{(SOC)}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\| \\begin{pmatrix} 2\\sqrt{u_i} \\\\ d_i - t_i \\end{pmatrix} \\|_2 \\leq d_i + t_i, \\quad \\forall i \\quad \\text{(RSOC)}\n",
+    "(1/2, u_i, d_i - t_i) \\in Q_r^n \\quad \\text{(RSOC)}\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -155,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "cf8da0bc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-17T11:22:46.330034100Z",
-     "start_time": "2024-05-17T11:22:46.321517300Z"
+     "end_time": "2024-05-20T11:55:20.689346300Z",
+     "start_time": "2024-05-20T11:55:18.786327300Z"
     }
    },
    "outputs": [],
@@ -172,12 +184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 339,
    "id": "e0d2b41f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-17T11:48:02.944704200Z",
-     "start_time": "2024-05-17T11:48:02.927061500Z"
+     "end_time": "2024-05-20T16:05:05.987217200Z",
+     "start_time": "2024-05-20T16:05:05.976549900Z"
     }
    },
    "outputs": [],
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 340,
    "outputs": [
     {
      "name": "stdout",
@@ -237,7 +249,7 @@
     "# Adding all terms of the form - 2d_i (x_i - y_i)^T P (x_i - y_i))^{1/2}\n",
     "for distance, x_i, y_i in zip(d, x, y):\n",
     "    objective += -2*distance*cp.sqrt(cp.quad_form((x_i - y_i),P_approx))\n",
-    "# Adding all terms of the form  (x_i - y_i)^T P (x_i - y_i))\n",
+    "#Adding all terms of the form  (x_i - y_i)^T P (x_i - y_i))\n",
     "for x_i, y_i in zip(x, y):\n",
     "    objective += cp.quad_form((x_i - y_i),P_approx)\n",
     "\n",
@@ -248,14 +260,42 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T11:48:12.221447600Z",
-     "start_time": "2024-05-17T11:48:11.748443500Z"
+     "end_time": "2024-05-20T16:05:07.270442300Z",
+     "start_time": "2024-05-20T16:05:06.848899800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 343,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The matrix P: [[ 5.83327652  3.05560287 -0.46127417  1.42390417  2.65533374]\n",
+      " [ 3.05560287 12.41365495  1.32743964  4.81210991 -2.39915755]\n",
+      " [-0.46127417  1.32743964  3.15148489 -0.60133449 -2.57224085]\n",
+      " [ 1.42390417  4.81210991 -0.60133449  2.89010061  0.76149742]\n",
+      " [ 2.65533374 -2.39915755 -2.57224085  0.76149742 10.55599809]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### The matrix P\n",
+    "print(f\"The matrix P: {P_approx.value}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-20T16:05:50.270871600Z",
+     "start_time": "2024-05-20T16:05:50.260302400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
    "outputs": [
     {
      "name": "stdout",
@@ -269,14 +309,24 @@
     "### Testing ###\n",
     "d_guessed = np.linalg.norm(la.sqrtm(P_approx.value).dot((X_test-Y_test).T),axis=0)\n",
     "tse = (np.linalg.norm(d_test - d_guessed)**2)/N_test\n",
-    "print(f\"Test Error is {tse}\")\n"
+    "print(f\"Test Error is {tse}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T11:48:24.496741900Z",
-     "start_time": "2024-05-17T11:48:24.481061500Z"
+     "end_time": "2024-05-20T16:06:00.731183100Z",
+     "start_time": "2024-05-20T16:06:00.712886500Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Comments: The test error is higher than the train error, which is to be expected when learned parameters are applied to new data not seen on training.\n",
+    "#### However, the difference gap is not that large, signifying that we also did not learn only the training data, aka did not result in an overfit."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
