--- a/convex/assignment_3/mouselinos_cx_assignment3.ipynb
+++ b/convex/assignment_3/mouselinos_cx_assignment3.ipynb
@@ -31,6 +31,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Solution\n",
     "--------\n",
@@ -39,16 +42,16 @@
     "\n",
     "##### 1) Show that the objective function $f$ is convex - Note: The exersize says $f(S)$ but since our variable is P, I think it makes sense to refer to it as $f(P)$ instead\n",
     "\n",
-    "To show that the objective function $\\( f(P) \\)$ is convex, we first expand the expression for $\\( d(x_i, y_i) \\)$:\n",
+    "To show that the objective function $f(P)$ is convex, we first expand the expression for $d(x_i, y_i)$:\n",
     "$d(x_i, y_i) = (x_i - y_i)^T P (x_i - y_i) ^{1/2}.$\n",
     "\n",
-    "Substitute this into the objective function $\\( f(P) \\)$:\n",
+    "Substitute this into the objective function $f(P)$:\n",
     "$f(P) = \\frac{1}{N} \\sum_{i=1}^N ( d_i - \\left( (x_i - y_i)^T P (x_i - y_i) \\right)^{1/2})^2.$\n",
     "\n",
-    "Let $\\( z_i = x_i - y_i \\)$. Then, the objective function becomes:\n",
+    "Let $z_i = x_i - y_i$. Then, the objective function becomes:\n",
     "$f(P) = \\frac{1}{N} \\sum_{i=1}^N (d_i - \\left( z_i^T P z_i \\right)^{1/2})^2.$\n",
     "\n",
-    "To prove convexity, we need to show that $\\( f(P) \\)$ is a convex function of $\\( P \\)$. By expanding the square we end up:\n",
+    "To prove convexity, we need to show that $f(P)$ is a convex function of $P$. By expanding the square we end up:\n",
     "$f(P) = \\frac{1}{N} \\sum_{i=1}^N ( d_i^2 - 2 d_i (z_i^T P z_i)^{1/2} + z_i^T P z_i).$\n",
     "\n",
     "We can ignore the $\\frac{1}{N}$ for our analysis, end we end up with a sum of terms that look like:\n",
@@ -56,19 +59,19 @@
     "$d_i^2 - 2 d_i (z_i^T P z_i)^{1/2} + z_i^T P z_i$\n",
     "\n",
     "For each term:\n",
-    "- $\\( d_i^2 \\)$ is constant with respect to \\( P \\).\n",
-    "- $\\( z_i^T P z_i \\)$ is linear in $\\( P \\)$ because $\\( P \\in \\mathbf{S}^n_+ \\)$, and the product $\\( z_i^T P z_i \\)$ is a linear function of $\\( P \\)$.\n",
+    "- $d_i^2$ is constant with respect to P.\n",
+    "- $z_i^T P z_i$ is linear in $P$ because $P \\in \\mathbf{S}^n_+ $, and the product $z_i^T P z_i$ is a linear function of $P$.\n",
     "- The square root of the affine function $z_i^T P z_i$ is concave and multiplying by a negative constant $-2 d_i$ makes it convex. $-2 d_i (z_i^T P z_i)^{1/2}$ is convex.\n",
     "\n",
-    "Therefore, each term of the summation is a sum of a constant, a linear term, and a convex term, thus a convex term. The sum of convex terms is convex, which makes $\\( f(P) \\)$ a convex function.\n",
+    "Therefore, each term of the summation is a sum of a constant, a linear term, and a convex term, thus a convex term. The sum of convex terms is convex, which makes $f(P)$ a convex function.\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Theoretical Part\n",
     "\n",
@@ -80,7 +83,7 @@
     "\n",
     "- $t_i = \\sqrt{(x_i - y_i)^T P (x_i - y_i)}$\n",
     "\n",
-    "Then we can rewrite the objective function using slack variables $t_i$ and $u_i$ to represent $\\((d_i - t_i)^2\\)$:\n",
+    "Then we can rewrite the objective function using slack variables $t_i$ and $u_i$ to represent $((d_i - t_i)^2)$:\n",
     "- $u_i = (d_i - t_i)^2 $\n",
     "\n",
     "Our goal is to minimize:\n",
@@ -119,7 +122,7 @@
     "\n",
     "\n",
     "2. **Rotated Second-Order Cone (RSOC) Constraint for $u_i$**:\n",
-    "   We can express $\\( (d_i - t_i)^2 \\leq u_i \\)$ as the equivalent $\\| (d_i - t_i) \\|^2_2 \\leq u_i$:\n",
+    "   We can express $(d_i - t_i)^2 \\leq u_i$ as the equivalent $\\| (d_i - t_i) \\|^2_2 \\leq u_i$:\n",
     "   $$\n",
     "   \\| \\begin{pmatrix} 2\\sqrt{u_i} \\\\ d_i - t_i \\end{pmatrix} \\|_2 \\leq d_i + t_i, \\quad \\forall i\n",
     "   $$\n",
@@ -129,10 +132,22 @@
     "   $$\n",
     "\n",
     "3. **Positive Semidefinite Cone (PSD) Constraint**:\n",
-    "   $$ P \\succeq 0 $$ or $$P \\in S^n_+$$\n",
+    "   $$\n",
+    "   P \\succeq 0\n",
+    "   $$ \n",
+    "   or \n",
+    "   $$\n",
+    "   P \\in S^n_+\n",
+    "   $$\n",
     "\n",
     "4. **Non-Negativity Constraint**:\n",
-    "   $$ u_i \\geq 0, \\quad t_i \\geq 0, \\quad \\forall i $$ or $$u_i, t_i \\in R^n_+$$\n",
+    "   $$ \n",
+    "   u_i \\geq 0, \\quad t_i \\geq 0, \\quad \\forall i\n",
+    "   $$\n",
+    "   or \n",
+    "   $$\n",
+    "   u_i, t_i \\in R^n_+\n",
+    "   $$\n",
     "\n",
     "The final conic program is:\n",
     "\n",
@@ -157,13 +172,8 @@
     "$$\n",
     "u_i \\in R^n_+, t_i \\in R^n_+, \\forall i \\quad \\text{(Non-Negativity)}\n",
     "$$\n",
-    "\n",
-    "\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -220,16 +230,23 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### My solution"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "#### My solution"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 340,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-20T16:05:07.270442300Z",
+     "start_time": "2024-05-20T16:05:06.848899800Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -256,18 +273,18 @@
     "problem = cp.Problem(cp.Minimize(objective / N))\n",
     "tre = problem.solve()\n",
     "print(f\"Training Error is {tre}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-20T16:05:07.270442300Z",
-     "start_time": "2024-05-20T16:05:06.848899800Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 343,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-20T16:05:50.270871600Z",
+     "start_time": "2024-05-20T16:05:50.260302400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -284,18 +301,18 @@
    "source": [
     "### The matrix P\n",
     "print(f\"The matrix P: {P_approx.value}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-20T16:05:50.270871600Z",
-     "start_time": "2024-05-20T16:05:50.260302400Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 344,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-20T16:06:00.731183100Z",
+     "start_time": "2024-05-20T16:06:00.712886500Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -310,33 +327,26 @@
     "d_guessed = np.linalg.norm(la.sqrtm(P_approx.value).dot((X_test-Y_test).T),axis=0)\n",
     "tse = (np.linalg.norm(d_test - d_guessed)**2)/N_test\n",
     "print(f\"Test Error is {tse}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-20T16:06:00.731183100Z",
-     "start_time": "2024-05-20T16:06:00.712886500Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### Comments: The test error is higher than the train error, which is to be expected when learned parameters are applied to new data not seen on training.\n",
-    "#### However, the difference gap is not that large, signifying that we also did not learn only the training data, aka did not result in an overfit."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "##### Comments: The test error is higher than the train error, which is to be expected when learned parameters are applied to new data not seen on training.\n",
+    "##### However, the difference gap is not that large, signifying that we also did not learn only the training data, aka did not result in an overfit."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
